<resources>
    <string name="app_name">Practica 5</string>
    <string name="Resumen_del_dia">Resumen breve del día</string>
    <string name="Valorar_vida">Valorar día</string>
    <string name="Contar_dia">Cuenta a tu diario tu día…</string>
    <string name="radio_button_ascendente">Asc</string>
    <string name="radio_button_descendente">Desc</string>
    <string name="titulo_campos_incompletos">Campos incompletos</string>
    <string name="cont_campos_incompletos">Completa todos los campos para guardar la valoración.</string>
    <string name="ordenar">Ordenar</string>
    <string name="valora_vida">Valora vida</string>
    <string name="mostrar_entre_fechas">Mostrar entre fechas</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="ultimo_dia">Último día</string>
    <string name="about_title">Acerca de</string>
    <string name="about_content">
        Práctica 5\n
        V1.0\n
        David Cuartero Gambín\n
        Licencia cc\n
        (Creative Commons)</string>
    <string name="ok_button">OK</string>
    <string name="ordena_titulo">Ordenar por</string>
    <string name="ordena_contenido">Ordenado por&#160;</string> <!-- Valor unicode del espacio -->
    <string name="preference_file">preferencias</string>
    <string name="pref_key_ultimo_dia">pref_ultimo_dia</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="elegir_de_la_galería">Elegir de la galería</string>


    <!-- Preference Titles -->
    <string name="messages_header">Datos personales</string>
    <string name="sync_header">Configuración</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="seleccione_imagen">Seleccione una imagen</string>
    <string name="permisos_aceptados">Permisos aceptados</string>
    <string name="necesito_permisos">Necesito los permisos para poder elegir una foto</string>
    <string name="peticion_permisos">Petición de Permisos</string>
    <string name="titulo_eliminar">Aviso</string>
    <string name="mensaje_eliminar">¿Está seguro que desea eliminar esta tarea?</string>
</resources>