<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_ordenar"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/ordenar"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_valoravida"
        android:title="@string/valora_vida" />
    <item
        android:id="@+id/action_fechas"
        android:title="@string/mostrar_entre_fechas" />
    <item
        android:id="@+id/action_ultimodia"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/ultimo_dia" />
    <item
        android:id="@+id/action_config"
        android:title="@string/configuracion" />
    <item
        android:id="@+id/action_acercade"
        android:title="@string/acerca_de" />
</menu>